--- a/PhotoManager.App/PhotoManager.App.csproj
+++ b/PhotoManager.App/PhotoManager.App.csproj
@@ -9,7 +9,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Compile Include=".gitignore" />
+    <None Include=".gitignore" />
   </ItemGroup>
 
   <ItemGroup>
