--- a/PhotoManager.App/PhotoManager.App.csproj
+++ b/PhotoManager.App/PhotoManager.App.csproj
@@ -24,6 +24,7 @@
     <PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="8.0.0" />
     <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="9.0.8" />
     <PackageReference Include="Microsoft.Extensions.Hosting" Version="8.0.0" />
+    <PackageReference Include="WindowsAPICodePack" Version="1.1.4" />
   </ItemGroup>
 
   <ItemGroup>
